# Softwareprojekt-Clawmachine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  config.ini  config.local.ini.example  platformio.ini  platformio_claw2.ini  sdkconfig.claw_2  sdkconfig.defaults
.claude/: settings.json
.claude/commands/: broker.md  build.md  emulate.md  server.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: latex.yml
data/deb_files/: containerd.io-dbgsym_2.2.3-1~debian.13~trixie_arm64.deb
docker/: docker-compose.yml
docker/captive-dns/: Dockerfile  dnsmasq.conf  (+1 more)
docs/: Claw_machine_class_diagram.drawio  class_diagram.md
frontend/: angular.json  package-lock.json  package.json
include/: firmware_config.h
python_server/: __init__.py  __main__.py  config.ini  config.py  configuration_loader.py  mqtt.py  requirements.txt  server.py
scripts/: init_project.sh  install_deb_files_on_raspberry.sh  mqtt_broker_logs.sh  mqtt_message_logs.sh  run_emulated_esp_once.sh  setup_raspberrypi.sh  start_clawmachine.sh  start_mqtt_broker.sh  start_project.sh  stop_clawmachine.sh  stop_mqtt_broker.sh
src/: CMakeLists.txt  main.cpp
src_camera/: cam.cpp  camera_doku.txt
src_claw_1/: main.cpp
src_claw_2/: CMakeLists.txt  CMakeLists.txt.save  main.cpp  sketch.cpp
src_claw_3/: main.cpp
src_claw_bluetooth_devices_test/: main.cpp
src_claw_motor_controller/: claw_motor_controller.cpp  claw_motor_controller.h  main.cpp
src_claw_player_input/: joy_con_input.cpp  joy_con_input.h  main.c  main.cpp  panel_input.cpp  panel_input.h
src_claw_server/: main.cpp
(+47 files in other folders)
